ya cambié el formato de los números para las vistas de totalespor año y por mes, además de las vistas de ventas. el archivo .xhtml de compras no me salen aqui pero para ponerles el formato no hay nada mas que hacer que poner un <f:convertNumber type="currency" currencySymbol="$" /> en el <h:outputText...> donde se obtiene el dato.

--- a/FinanzasBGX.Web/web/venta/Comparar.xhtml
+++ b/FinanzasBGX.Web/web/venta/Comparar.xhtml
@@ -70,7 +70,9 @@
                                 <f:facet name="header">
                                     <h:outputText value="#{bundle.ListSalesMonth_total}"/>
                                 </f:facet>
-                                <h:outputText value="#{item.total}"/>
+                                <h:outputText value="#{item.total}">
+                                    <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </h:column>
                         </h:dataTable>
                     </div>
@@ -88,7 +90,9 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListSalesMonth_total}"/>
                             </f:facet>
-                            <h:outputText value="#{item.total}"/>
+                            <h:outputText value="#{item.total}">
+                                <f:convertNumber type="currency" currencySymbol="$" />
+                            </h:outputText>
                         </h:column>
                     </h:dataTable>
                     </div>
