--- a/FinanzasBGX.Web/web/venta/VentaMes.xhtml
+++ b/FinanzasBGX.Web/web/venta/VentaMes.xhtml
@@ -55,7 +55,9 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListSalesMonth_total}"/>
                             </f:facet>
-                            <h:outputText value="#{item.total}"/>
+                            <h:outputText value="#{item.total}">
+                                <f:convertNumber type="currency" currencySymbol="$ " />
+                            </h:outputText>
                         </h:column>
                     </h:dataTable>
                  </div>
