--- a/FinanzasBGX.Web/web/venta/Distribuidor.xhtml
+++ b/FinanzasBGX.Web/web/venta/Distribuidor.xhtml
@@ -55,7 +55,9 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListSalesDistributor_total}"/>
                             </f:facet>
-                            <h:outputText value="#{item.total}"/>
+                            <h:outputText value="#{item.total}">
+                                <f:convertNumber type="currency" currencySymbol="$" />
+                            </h:outputText>
                         </h:column>
                     </h:dataTable>
                      </div>
