ya cambié el formato de los números para las vistas de totalespor año y por mes, además de las vistas de ventas. el archivo .xhtml de compras no me salen aqui pero para ponerles el formato no hay nada mas que hacer que poner un <f:convertNumber type="currency" currencySymbol="$" /> en el <h:outputText...> donde se obtiene el dato.

--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -47,10 +47,14 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText value="$ #{ventaController.totalSalesYear}"/>
+                                <h:outputText value="#{ventaController.totalSalesYear}">
+                                    <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText value="$ #{ventaController.totalSalesYear}"/>
+                               <h:outputText value="#{ventaController.totalSalesYear}">
+                                   <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </div>
                         </div>
                     </div>
@@ -65,10 +69,14 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                                <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
+                                    <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                               <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
+                                   <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </div>
                         </div>
                     </div>
@@ -80,7 +88,9 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                                <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
+                                    <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </div>
                         </div>
                     </div>
