--- a/FinanzasBGX.Web/web/index_mes.xhtml
+++ b/FinanzasBGX.Web/web/index_mes.xhtml
@@ -47,10 +47,14 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText value="$ #{ventaController.totalSalesYear}"/>
+                                <h:outputText value="#{ventaController.totalSalesYear}">
+                                    <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText value="$ #{ventaController.totalSalesYear}"/>
+                               <h:outputText value="#{ventaController.totalSalesYear}">
+                                   <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </div>
                         </div>
                     </div>
@@ -65,10 +69,14 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                                <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
+                                    <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                               <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
+                                   <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </div>
                         </div>
                     </div>
@@ -80,7 +88,9 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                                <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
+                                    <f:convertNumber type="currency" currencySymbol="$" />
+                                </h:outputText>
                             </div>
                         </div>
                     </div>
