se agregan metodos para obtener la compra por mes, proveedor y componente. se crean vistas para los reportes de compras, se agregan filtros y etiqueta sobre lo que se esta buscando se crean objetos para manejar los resultados de los reportes

--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -50,7 +50,7 @@
                                 <h:outputText value="$ #{ventaController.totalSalesYear}"/>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText value="$ #{ventaController.totalSalesYear}"/>
+                               <h:outputText value="$ #{compraController.totalPurchasesYear}"/>
                             </div>
                         </div>
                     </div>
