--- a/FinanzasBGX.Web/web/index_mes.xhtml
+++ b/FinanzasBGX.Web/web/index_mes.xhtml
@@ -47,10 +47,10 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText value="$ #{ventaController.totalSalesYear}"/>
+                                <h:outputText value="$ #{ventaController.totalSalesActualMonth}"/>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText value="$ #{ventaController.totalSalesYear}"/>
+                               <h:outputText value="$ #{compraController.totalPurchasesActualMonth}"/>
                             </div>
                         </div>
                     </div>
@@ -65,10 +65,10 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                                <h:outputText class="text-right" value="$ #{ventaController.totalSalesActualMonth}"/>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                               <h:outputText class="text-right" value="$ #{ventaController.totalSalesActualMonth}"/>
                             </div>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                                <h:outputText class="text-right" value="$ #{ventaController.totalSalesActualMonth}"/>
                             </div>
                         </div>
                     </div>
