--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -67,14 +67,10 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
-                                    <f:convertNumber type="currency" currencySymbol="$" />
-                                </h:outputText>
+                                <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
-                                   <f:convertNumber type="currency" currencySymbol="$" />
-                                </h:outputText>
+                               <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
                             </div>
                         </div>
                     </div>
