formatos de numero

--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -48,11 +48,13 @@
                         <div class="row">
                             <div class="col-4 text-right">
                                 <h:outputText value="#{ventaController.totalSalesYear}">
-                                    <f:convertNumber type="currency" currencySymbol="$" />
+                                    <f:convertNumber type="currency" currencySymbol="$ " />
                                 </h:outputText>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText value="$ #{compraController.totalPurchasesYear}"/>
+                               <h:outputText value="$ #{compraController.totalPurchasesYear}">
+                                    <f:convertNumber type="currency" currencySymbol="$ " />
+                                </h:outputText>
                             </div>
                         </div>
                     </div>
@@ -67,10 +69,14 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                                <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
+                                    <f:convertNumber type="currency" currencySymbol="$ " />
+                                </h:outputText>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                               <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
+                                    <f:convertNumber type="currency" currencySymbol="$ " />
+                                </h:outputText>
                             </div>
                         </div>
                     </div>
@@ -83,7 +89,7 @@
                         <div class="row">
                             <div class="col-4 text-right">
                                 <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
-                                    <f:convertNumber type="currency" currencySymbol="$" />
+                                    <f:convertNumber type="currency" currencySymbol="$ " />
                                 </h:outputText>
                             </div>
                         </div>
