--- a/FinanzasBGX.Web/web/venta/Graficas.xhtml
+++ b/FinanzasBGX.Web/web/venta/Graficas.xhtml
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      ><!-- xmlns:gc="http://nz.co.kevindoran/googlecharts">-->
+      xmlns:gc="http://nz.co.kevindoran/googlecharts">
     <ui:composition template="/template/ventas.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.GraficasTitle}" class="text-info"></h:outputText>
         </ui:define>
         <ui:define name="body">
-            <!--<gc:googleChart model="#{ventaController.chartModelCurrentYear}" height="400px" width="800px" />-->
+            <gc:googleChart model="#{ventaController.chartModelCurrentYear}" height="400px" width="800px" />
         </ui:define>
     </ui:composition>
 </html>
