--- a/FinanzasBGX.Web/web/compra/Graficas.xhtml
+++ b/FinanzasBGX.Web/web/compra/Graficas.xhtml
@@ -3,62 +3,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:gc="http://nz.co.kevindoran/googlecharts">
     <ui:composition template="/template/compras.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.GraficasTitle}" class="text-info"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
-                <div class="row">
+                <div class="row" style="margin-top: -20px; margin-left: -5px">
                     <div class="col-1">
                         <h:outputText value="Año" />
                     </div>
-                    <div class="col-2">
-                        <h:selectOneMenu value="#{ventaController.currentYear}">
-                            <f:selectItem itemValue="2013" itemLabel="2013" />
-                            <f:selectItem itemValue="2012" itemLabel="2012" />
-                            <f:selectItem itemValue="2011" itemLabel="2011" />
-                            <f:selectItem itemValue="2010" itemLabel="2010" />
+                    <div class="col-1" style="margin-left:-30px;">
+                        <h:selectOneMenu value="#{compraController.graphViewCurrentYear}">
+                            <f:selectItems value="#{compraController.years}" var="d"
+                                          itemLabel="#{d}" itemValue="#{d}" />
                             <f:ajax  />
                         </h:selectOneMenu>
                     </div>
-                    <div class="col-2">
-                        <h:outputText value="Distribuidor" />
-                    </div>
-                    <div class="col-3">
-                        <h:selectOneMenu value="#{ventaController.currentDistributor}">               
-                            <f:selectItem itemLabel="" itemValue="-1" noSelectionOption="true" />
-                            <f:selectItems value="#{clienteController.distributors}" var="d"
-                                          itemLabel="#{d.nombre}" itemValue="#{d.id}" />
-                            <f:ajax  />
-                        </h:selectOneMenu>
-                    </div>
-                    <div class="col-1" style="padding: 0px !important">
+                    <div class="col-1" style="padding: 0px !important; margin-left:30px;">
                         <h:commandButton  value="Buscar" immediate="true" class="btn btn-info"
-                                          action="#{ventaController.searchMonth}">
-                            <f:ajax render="dtSalesMonth"/>
+                                          action="#{compraController.updateGraph}">
+                            <f:ajax render="graphCompra"/>
                         </h:commandButton>
                     </div>
                 </div>
-                 <div style="overflow: auto; max-height: 400px;">
-                <h:dataTable id="dtSalesMonth" class="table table-striped"
-                             value="#{ventaController.totalSalesMonth}" 
-                             var="item" cellpadding="2" cellspacing="0">
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSalesMonth_mes}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.mes}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSalesMonth_total}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.total}"/>
-                        </h:column>
-                    </h:dataTable>
-                 </div>
+                <gc:googleChart id="graphCompra" model="#{compraController.chartModelCurrentYear}" height="400px" width="800px" />                
+
             </h:form>
         </ui:define>
     </ui:composition>
