--- a/FinanzasBGX.Web/web/venta/GraficaActual.xhtml
+++ b/FinanzasBGX.Web/web/venta/GraficaActual.xhtml
@@ -3,11 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:gc="http://nz.co.kevindoran/googlecharts">
-    <ui:composition template="/template/compras.xhtml">
+    <ui:composition template="/template/ventas.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.GraficasTitle}" class="text-info"></h:outputText>
+            <h:outputText value="#{bundle.GraficaActualTitle}" class="text-info"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
@@ -16,21 +15,20 @@
                         <h:outputText value="Año" />
                     </div>
                     <div class="col-1" style="margin-left:-30px;">
-                        <h:selectOneMenu value="#{compraController.graphViewCurrentYear}">
-                            <f:selectItems value="#{compraController.years}" var="d"
-                                          itemLabel="#{d}" itemValue="#{d}" />
-                            <f:ajax  />
+                        <h:selectOneMenu value="#{ventaController.graphViewCurrentYear}">
+                            
                         </h:selectOneMenu>
                     </div>
                     <div class="col-1" style="padding: 0px !important; margin-left:30px;">
                         <h:commandButton  value="Buscar" immediate="true" class="btn btn-info"
-                                          action="#{compraController.updateGraph}">
-                            <f:ajax render="graphCompra"/>
+                                          action="#{ventaController.updateGraph}">
+                            
                         </h:commandButton>
                     </div>
                 </div>
-                <gc:googleChart id="graphCompra" model="#{compraController.chartModelCurrentYear}" height="400px" width="800px" />                
-
+                <div style="overflow: auto; max-height: 400px;">
+                     <gc:googleChart id="graphActual" model="#{ventaController.chartModelCurrentYear}" height="400px" width="800px" />          
+                </div>
             </h:form>
         </ui:define>
     </ui:composition>
