se modifican pantallas de venta para que incluyan la etiqueta de busqueda y los filtros de fecha. se agrega tabla de diferencia cuando se compara cliente

--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -52,7 +52,7 @@
                                 </h:outputText>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText value="$ #{compraController.totalPurchasesYear}">
+                               <h:outputText value="#{compraController.totalPurchasesYear}">
                                     <f:convertNumber type="currency" currencySymbol="$ " />
                                 </h:outputText>
                             </div>
