--- a/FinanzasBGX.Web/web/compra/Componente.xhtml
+++ b/FinanzasBGX.Web/web/compra/Componente.xhtml
@@ -83,7 +83,7 @@
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSalesMonth_total}"/>
+                                <h:outputText value="#{bundle.ListPurchasesMonth_total}"/>
                             </f:facet>
                             <h:outputText value="#{item.total}">
                                 <f:convertNumber type="currency" currencySymbol="$ " />
