--- a/FinanzasBGX.Web/web/venta/Distribuidor.xhtml
+++ b/FinanzasBGX.Web/web/venta/Distribuidor.xhtml
@@ -3,45 +3,61 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <ui:composition template="/template/ventas.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.VentaDistribuidorTitle}" class="text-info"></h:outputText>
         </ui:define>
         <ui:define name="body">
              <h:form>
-                <div class="row">
-                    <div class="col-1">
-                        <h:outputText value="Año" />
-                    </div>
+                <div class="row" style="margin-top: -15px; margin-left: -5px;">
                     <div class="col-2">
-                        <h:selectOneMenu value="#{ventaController.currentYear}">
-                            <f:selectItem itemValue="2013" itemLabel="2013" />
-                            <f:selectItem itemValue="2012" itemLabel="2012" />
-                            <f:selectItem itemValue="2011" itemLabel="2011" />
-                            <f:selectItem itemValue="2010" itemLabel="2010" />
-                            <f:ajax  />
-                        </h:selectOneMenu>
+                        <h:outputText value="Fecha inicial" />
                     </div>
-                    <div class="col-2">
-                        <h:outputText value="Distribuidor" />
+                    <div class="col-2 calendar" style="margin-top:-8px;">
+                        <p:calendar id="startDate" value="#{ventaController.distributorViewStartDate}"
+                                    pattern="dd/MM/yyyy" effect="slideDown" navigator="true"
+                                    maxdate="#{ventaController.distributorViewEndDate}"
+                                    style="margin-left: -40px">
+                            <p:ajax event="dateSelect" update="endDate"/>
+                            <f:convertDateTime pattern="dd/MM/yyyy"/>  
+                        </p:calendar> 
                     </div>
-                    <div class="col-3">
-                        <h:selectOneMenu value="#{ventaController.currentDistributor}">               
+                    <div class="col-2" style="margin-left: -50px">
+                        <h:outputText value="Fecha fin" />
+                    </div>
+                    <div class="col-2 calendar" style="margin-top:-8px">
+                        <p:calendar id="endDate" value="#{ventaController.distributorViewEndDate}"
+                                    pattern="dd/MM/yyyy" effect="slideDown" navigator="true"
+                                    mindate="#{ventaController.distributorViewStartDate}"
+                                    style="margin-left: -65px">
+                            <p:ajax event="dateSelect" update="startDate"/>
+                            <f:convertDateTime pattern="dd/MM/yyyy"/>  
+                        </p:calendar> 
+                    </div>
+                    <div class="col-1" style="margin-left: -75px">
+                        <h:outputText value="Distribuidor" style="margin-top: -15px"/>
+                    </div>
+                    <div class="col-3" style="margin-left:10px; margin-top: -5px">
+                        <h:selectOneMenu value="#{ventaController.distributorViewCurrentDistributor}" style="width: 220px">               
                             <f:selectItem itemLabel="" itemValue="-1" noSelectionOption="true" />
                             <f:selectItems value="#{clienteController.distributors}" var="d"
                                           itemLabel="#{d.nombre}" itemValue="#{d.id}" />
                             <f:ajax  />
                         </h:selectOneMenu>
                     </div>
-                    <div class="col-1" style="padding: 0px !important">
+                    <div class="col-1" style="padding:0px !important; margin-left: 35px; margin-top: -5px">
                         <h:commandButton  value="Buscar" immediate="true" class="btn btn-info"
                                           action="#{ventaController.searchDistributor}">
                         <f:ajax render="dtSalesDistributor"/>
+                        <f:ajax render="searchText"/>
                         </h:commandButton>
                     </div>
                 </div>
-                 <div style="overflow: auto; max-height: 400px;">
+                 <h:outputText id="searchText" style="font-size: 13.6px;" class="text-success" 
+                              value="#{ventaController.distributorViewSearch}"/>
+                <div style="overflow: auto; max-height: 400px;">
                 <h:dataTable id="dtSalesDistributor" class="table table-striped"
                              value="#{ventaController.totalSalesDistributorYear}" 
                              var="item" cellpadding="2" cellspacing="0">
