--- a/FinanzasBGX.Web/web/venta/GraficaActual.xhtml
+++ b/FinanzasBGX.Web/web/venta/GraficaActual.xhtml
@@ -3,10 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:gc="http://nz.co.kevindoran/googlecharts">
     <ui:composition template="/template/ventas.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.GraficaActualTitle}" class="text-info"></h:outputText>
+            <h:outputText value="#{bundle.GraficaActualTitle} (#{ventaController.graphViewCurrentYear})" class="text-info"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
@@ -16,7 +17,9 @@
                     </div>
                     <div class="col-1" style="margin-left:-30px;">
                         <h:selectOneMenu value="#{ventaController.graphViewCurrentYear}">
-                            
+                            <f:selectItems value="#{ventaController.years}" var="d"
+                                          itemLabel="#{d}" itemValue="#{d}" />
+                            <f:ajax  />
                         </h:selectOneMenu>
                     </div>
                     <div class="col-1" style="padding: 0px !important; margin-left:30px;">
