--- a/FinanzasBGX.Web/web/compra/GraficaActual.xhtml
+++ b/FinanzasBGX.Web/web/compra/GraficaActual.xhtml
@@ -7,7 +7,7 @@
       xmlns:gc="http://nz.co.kevindoran/googlecharts">
     <ui:composition template="/template/compras.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.GraficaActualTitle}" class="text-info"></h:outputText>
+            <h:outputText value="#{bundle.GraficaActualTitle} (#{compraController.graphYear})" class="text-info"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
