--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -33,7 +33,7 @@
             </div>
             <div class="col-9">
                 <h1>
-                    <ui:insert name="title">Indicadores del Año actual</ui:insert>
+                    <ui:insert name="title">Indicadores del Año (#{genericController.currentYear})</ui:insert>
                 </h1>
                 <ui:insert name="body">
                     <div class="divIndicadores">
