--- a/FinanzasBGX.Web/web/index_mes.xhtml
+++ b/FinanzasBGX.Web/web/index_mes.xhtml
@@ -33,7 +33,7 @@
             </div>
             <div class="col-9">
                 <h1>
-                    <ui:insert name="title">Indicadores del Mes Actual</ui:insert>
+                    <ui:insert name="title">Indicadores del Mes (#{genericController.currentMonth})</ui:insert>
                 </h1>
                 <ui:insert name="body">
                     <div class="divIndicadores">
