--- a/FinanzasBGX.Web/web/venta/GraficaActual.xhtml
+++ b/FinanzasBGX.Web/web/venta/GraficaActual.xhtml
@@ -7,7 +7,7 @@
       xmlns:gc="http://nz.co.kevindoran/googlecharts">
     <ui:composition template="/template/ventas.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.GraficaActualTitle} (#{ventaController.graphViewCurrentYear})" class="text-info"></h:outputText>
+            <h:outputText value="#{bundle.GraficaActualTitle} (#{ventaController.graphYear})" class="text-info"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
