Se agrega pendiente por cobrar

--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -69,7 +69,7 @@
                         </div>
                         <div class="row">
                             <div class="col-4 text-right">
-                                <h:outputText class="text-right" value="#{ventaController.totalSalesYear}">
+                                <h:outputText class="text-right" value="#{ventaController.pendienteCobrarAnual}">
                                     <f:convertNumber type="currency" currencySymbol="$ " />
                                 </h:outputText>
                             </div>
