--- a/FinanzasBGX.Web/web/index_mes.xhtml
+++ b/FinanzasBGX.Web/web/index_mes.xhtml
@@ -74,7 +74,7 @@
                                 </h:outputText>
                             </div>
                             <div class="col-4 text-right divDerechoIndicador">
-                               <h:outputText class="text-right" value="#{ventaController.totalSalesActualMonth}">
+                               <h:outputText class="text-right" value="#{ventaController.pendienteProducirAnual}">
                                     <f:convertNumber type="currency" currencySymbol="$ " />
                                 </h:outputText>
                             </div>
