--- a/FinanzasBGX.Web/web/compra/CompraMes.xhtml
+++ b/FinanzasBGX.Web/web/compra/CompraMes.xhtml
@@ -4,7 +4,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:p="http://primefaces.org/ui">
     <ui:composition template="/template/compras.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.CompraMesTitle}" class="text-info"></h:outputText>
@@ -56,24 +56,18 @@
                 <h:outputText id="searchText" style="font-size: 13.6px" class="text-success"
                               value="#{compraController.monthViewSearch}"/>
                  <div style="overflow: auto; max-height: 400px;">
-                <h:dataTable id="dtPurchasesMonth" class="table table-striped"
+                <p:dataTable id="dtPurchasesMonth" styleClass="table table-striped"
                              value="#{compraController.totalPurchasesMonth}" 
-                             var="item" cellpadding="2" cellspacing="0">
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSalesMonth_mes}"/>
-                            </f:facet>
+                             var="item" > <!-- cellpadding="2" cellspacing="0"> -->
+                        <p:column sortBy="mes" headerText="#{bundle.ListSalesMonth_mes}">                            
                             <h:outputText value="#{item.mes}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPurchasesMonth_total}"/>
-                            </f:facet>
+                        </p:column>
+                        <p:column sortBy="total" headerText="#{bundle.ListPurchasesMonth_total}">
                             <h:outputText value="#{item.total}">
                                 <f:convertNumber type="currency" currencySymbol="$ " />
                             </h:outputText>
-                        </h:column>
-                 </h:dataTable>
+                        </p:column>
+                 </p:dataTable>
                  </div>
             </h:form>
         </ui:define>
