Se agrega pendiente por producir

--- a/FinanzasBGX.Web/web/pendiente/PorProducir.xhtml
+++ b/FinanzasBGX.Web/web/pendiente/PorProducir.xhtml
@@ -41,7 +41,7 @@
                                 <f:facet name="header">
                                     <h:outputText value="#{bundle.ListPurchasesComponent_component}"/>
                                 </f:facet>
-                                <h:outputText value="#{item.componente}"/>
+                                <h:outputText value="#{item.modelo}"/>
                             </h:column>
                             <h:column>
                                 <f:facet name="header">
