Cambios a estilo para tablas.

--- a/FinanzasBGX.Web/web/compra/CompraMes.xhtml
+++ b/FinanzasBGX.Web/web/compra/CompraMes.xhtml
@@ -56,10 +56,11 @@
                 <h:outputText id="searchText" style="font-size: 13.6px" class="text-success"
                               value="#{compraController.monthViewSearch}"/>
                  <div style="overflow: auto; max-height: 400px;">
-                <p:dataTable id="dtPurchasesMonth" styleClass="table table-striped"
+                     <img src=""
+                <p:dataTable id="dtPurchasesMonth" tableStyleClass="table table-striped"
                              value="#{compraController.totalPurchasesMonth}" 
                              var="item" > <!-- cellpadding="2" cellspacing="0"> -->
-                        <p:column sortBy="mes" headerText="#{bundle.ListSalesMonth_mes}">                            
+                        <p:column sortBy="month" headerText="#{bundle.ListSalesMonth_mes}">                            
                             <h:outputText value="#{item.mes}"/>
                         </p:column>
                         <p:column sortBy="total" headerText="#{bundle.ListPurchasesMonth_total}">
