--- a/FinanzasBGX.Web/web/venta/Distribuidor.xhtml
+++ b/FinanzasBGX.Web/web/venta/Distribuidor.xhtml
@@ -58,24 +58,18 @@
                  <h:outputText id="searchText" style="font-size: 13.6px;" class="text-success" 
                               value="#{ventaController.distributorViewSearch}"/>
                 <div style="overflow: auto; max-height: 400px;">
-                <h:dataTable id="dtSalesDistributor" class="table table-striped"
+                <p:dataTable id="dtSalesDistributor" tableStyleClass="table table-striped"
                              value="#{ventaController.totalSalesDistributorYear}" 
-                             var="item" cellpadding="2" cellspacing="0">
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSalesDistributor_distribuidor}"/>
-                            </f:facet>
+                             var="item">
+                        <p:column sortBy="distribuidor" headerText="#{bundle.ListSalesDistributor_distribuidor}">
                             <h:outputText value="#{item.distribuidor}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListSalesDistributor_total}"/>
-                            </f:facet>
+                        </p:column>
+                        <p:column sortBy="total" headerText="#{bundle.ListSalesDistributor_total}">
                             <h:outputText value="#{item.total}">
                                 <f:convertNumber type="currency" currencySymbol="$ " />
                             </h:outputText>
-                        </h:column>
-                    </h:dataTable>
+                        </p:column>
+                    </p:dataTable>
                      </div>
             </h:form>
         </ui:define>
