--- a/FinanzasBGX.Web/web/venta/VentaMes.xhtml
+++ b/FinanzasBGX.Web/web/venta/VentaMes.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <ui:composition template="/template/ventas.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.VentaMesTitle}" class="text-info"></h:outputText>
@@ -43,24 +44,18 @@
                 <h:outputText id="searchText" style="font-size: 13.6px" class="text-success"
                               value="#{ventaController.monthViewSearch}"/>
                  <div style="overflow: auto; max-height: 400px;">
-                    <h:dataTable id="dtSalesMonth" class="table table-striped"
+                    <p:dataTable id="dtSalesMonth" tableStyleClass="table table-striped"
                                  value="#{ventaController.totalSalesMonth}" 
-                                 var="item" cellpadding="2" cellspacing="0">
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="#{bundle.ListSalesMonth_mes}"/>
-                                </f:facet>
+                                 var="item">
+                            <p:column sortBy="month" headerText="#{bundle.ListSalesMonth_mes}">
                                 <h:outputText value="#{item.mes}"/>
-                            </h:column>
-                            <h:column>
-                                <f:facet name="header">
-                                    <h:outputText value="#{bundle.ListSalesMonth_total}"/>
-                                </f:facet>
+                            </p:column>
+                            <p:column sortBy="total" headerText="#{bundle.ListSalesMonth_total}">
                                 <h:outputText value="#{item.total}">
                                     <f:convertNumber type="currency" currencySymbol="$ " />
                                 </h:outputText>
-                            </h:column>
-                    </h:dataTable>
+                            </p:column>
+                    </p:dataTable>
                  </div>
             </h:form>
         </ui:define>
